--- a/pipes/run_model.Rmd
+++ b/pipes/run_model.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Light gradient boosting pipe"
+title: "Light gradient boosting pipe reference model on new data"
 author: "Pierre Camilleri"
-date: "1 juin 2018"
+date: "3 juin 2019"
 output: html_document
 ---
 
@@ -9,20 +9,17 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 h2o::h2o.no_progress()
+library(mlr)
+# Script parameters
 devtools::load_all()
-```
-
-## Script parameters
-```{r}
 database <- "test_signauxfaibles"
 collection <- "Features"
-actual_period <- as.Date("2019-03-01")
-periods <- actual_period
-last_batch <- "1905"
+actual_period <- as.Date("2019-05-01")
+last_batch <- "1906_6"
 min_effectif <- 10
 retrain_model <- TRUE
-type <- "dataframe"
 export_type <- c("csv", "mongodb")
+sample_size <- 10000
 ```
 
 ```{r}
@@ -30,38 +27,43 @@ connect_to_h2o()
 ```
 
 ```{r}
-res <- full_light_gradient_boosting(
+# QUICKFIX
+fields_without_undef <- get_fields(training = FALSE)
+fields_without_undef <- fields_without_undef[
+  !fields_without_undef %in% c("code_naf")
+  ]
+###
+task <- sf_task(
+  verbose = TRUE,
   database,
   collection,
-  periods,
-  last_batch,
-  min_effectif,
-  retrain_model = retrain_model,
-  type = type,
-  export_type = export_type
+  experiment_name = "Reference evaluation canvas",
+  experiment_description = "This experiment fixes the conditions for the evaluation of a new algorithm compared to former versions"
+)
+
+task <- load_hist_data(
+  task = task,
+  batch = last_batch,
+  subsample = sample_size,
+  fields = fields_without_undef[1:10]
+)
+task <- split_data(task, fracs = c(1,0,0))
+task <- prepare(task, data_names = c("train_data"))
+task[["model_parameters"]] <- list(
+  learn_rate = 0.044849,
+  max_depth = 8,
+  ntrees = 185,
+  min_child_weight = 6
   )
+task <- train(task)
+task <- load_new_data(task,
+task <- predict(task, data_names = "validation_data")
+task <- evaluate(task, data_name = "validation_data")
+task <- log(task)
 ```
 
-#```{r}
-#my_data <- as.data.frame(my_data)
-#my_data <- my_data %>% mutate(
-#  periode =  as.Date(structure(periode / 1000,
-#                               class = c('POSIXct','POSIXt')))
-#)
-#```
-#
-#```{r}
-#siret = "01234567891112"
-#shapley_plot(c(siret), my_data, my_model, batch = last_batch)
-#```
-#
-#```{r results="hide"}
-#
-#siret = "01234567891112"
-#export_fiche_visite(
-#  sirets = c(),
-#  database,
-#  last_batch,
-#  with_urssaf = FALSE
-#  )
-#```
+# OU
+```{r}
+task <- evaluate(task, data_name = "validation_data", eval_function = custom_eval_urssaf())
+```
+
