modif sur serveur

--- a/pipes/reference_model.Rmd
+++ b/pipes/reference_model.Rmd
@@ -19,7 +19,7 @@ last_batch <- "1905_repeatable"
 min_effectif <- 10
 retrain_model <- TRUE
 export_type <- c("csv", "mongodb")
-sample_size <- 200000
+sample_size <- 800000
 ```
 
 ```{r}
@@ -37,17 +37,16 @@ task <- sf_task(
 
 task <- load_hist_data(
   task = task,
-  batch = last_batch,
-  subsample = sample_size
-)
+  batch = last_batch, subsample = sample_size)
+
 task <- split_n_folds(task, 4, 0.2)
 task <- prepare(task, data_names = c("train_data", "validation_data"))
-task <- optimize_hyperparameters(task, n_iter = 10)
+# task <- optimize_hyperparameters(task, n_iter = 10)
  task[["model_parameters"]] <- list(
-   learn_rate = 0.044849,
-   max_depth = 8,
-   ntrees = 185,
-   min_child_weight = 6
+   learn_rate = 0.044612,
+   max_depth = 7,
+   ntrees = 237,
+   min_child_weight = 3
    )
 task <- train(task)
 task <- predict(task, data_names = "validation_data")
