--- a/pipes/run_model.Rmd
+++ b/pipes/run_model.Rmd
@@ -15,7 +15,7 @@ devtools::load_all()
 database <- "test_signauxfaibles"
 collection <- "Features"
 actual_period <- as.Date("2019-05-01")
-last_batch <- "1906_6"
+last_batch <- "1906_7"
 min_effectif <- 10
 retrain_model <- TRUE
 export_type <- c("csv", "mongodb")
@@ -27,12 +27,6 @@ connect_to_h2o()
 ```
 
 ```{r}
-# QUICKFIX
-fields_without_undef <- get_fields(training = FALSE)
-fields_without_undef <- fields_without_undef[
-  !fields_without_undef %in% c("code_naf")
-  ]
-###
 task <- sf_task(
   verbose = TRUE,
   database,
@@ -41,25 +35,30 @@ task <- sf_task(
   experiment_description = "This experiment fixes the conditions for the evaluation of a new algorithm compared to former versions"
 )
 
+task <- load_new_data(
+  task = task,
+  periods = actual_period,
+  batch = last_batch
+)
 task <- load_hist_data(
   task = task,
-  batch = last_batch,
-  subsample = sample_size,
-  fields = fields_without_undef[1:10]
-)
+  subsample = 800000,
+  batch = last_batch
+  )
 task <- split_data(task, fracs = c(1,0,0))
 task <- prepare(task, data_names = c("train_data"))
-task[["model_parameters"]] <- list(
-  learn_rate = 0.044849,
-  max_depth = 8,
-  ntrees = 185,
-  min_child_weight = 6
-  )
+ task[["model_parameters"]] <- list(
+   learn_rate = 0.044612,
+   max_depth = 7,
+   ntrees = 237,
+   min_child_weight = 3
+   )
 task <- train(task)
-task <- load_new_data(task,
-task <- predict(task, data_names = "validation_data")
+task <- prepare(task, data_names = c("new_data"))
+task <- predict(task, data_names = "new_data")
 task <- evaluate(task, data_name = "validation_data")
-task <- log(task)
+save(task)
+export(task, "mongodb", batch = last_batch)
 ```
 
 # OU
